--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -340,11 +340,11 @@
       "footer_note_2": "2. Thời gian trình diễn dự kiến của từng tiết mục sẽ được BTC cập nhật tại website sự kiện vào ngày 24/11/2025",
       "footer_note_3": "3. Thí sinh cần có mặt trước giờ dự thi 15 phút để điểm danh và chuẩn bị",
       "footer_note_4": "4. Thí sinh chuẩn bị tiết mục cho vòng 1 với thời lượng không quá 3 phút, thể hiện được kỹ năng, năng khiếu của bản thân và nội dung chính của tác phẩm dự thi.",
-      "success_text_1": "Cảm ơn bạn đã đăng ký tham gia WISer's Greatest Show 2025. Thông tin đăng ký đã được  hệ thống ghi nhận và gửi đến địa chỉ email của bạn.",
-      "success_text_2": "Ban Tổ chức sẽ kiểm tra và phê duyệt hồ sơ dự thi của bạn.​",
-      "success_text_3": "Hãy sẵn sàng thể hiện tài năng và đam mê của bản thân tại <br/> WISers' Greatest show 2025!",
+      "success_text_1": "Cảm ơn bạn đã đăng ký tham gia WISer's Greatest Show 2025.",
+      "success_text_2": "Thông tin đăng ký đã được  hệ thống ghi nhận và gửi đến địa chỉ email của bạn.​",
+      "success_text_3": "Ban Tổ chức sẽ kiểm tra và phê duyệt hồ sơ dự thi của bạn.​",
       "success_text_4": "Vui lòng theo dõi thông tin cập nhật từ BTC qua email hoặc các kênh truyền thông chính thức của Nhà trường.​",
-      "success_text_5": "Hẹn gặp lại bạn tại <b>VÒNG 1 - WITHIN ME diễn ra vào 29/11/2025</b>.​Hãy sẵn sàng thể hiện tài năng và đam mê của bản thân tại​ WISers' Greatest show 2025!​",
+      "success_text_5": "Hẹn gặp lại bạn tại <b>VÒNG 1 - WITHIN ME diễn ra vào 29/11/2025</b>. ​Hãy sẵn sàng thể hiện tài năng và đam mê của bản thân tại​ WISers' Greatest show 2025!​",
       "submit_note": "Bằng việc nhấn nút “ĐĂNG KÝ”, bạn xác nhận rằng mình đã đọc và đồng ý với các quy định, thể lệ tham gia cuộc thi WISers’ Greatest Show 2025 trên website sự kiện​",
       "submitting": "Đang gửi đơn đăng ký. Vui lòng đợi..."
     },
