--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -337,14 +337,14 @@
       "footer_heading": "Notes for Round 1",
       "footer_note_1": "1. Contestants registering for Round 1 must complete the <b>registration form before 5:00 PM on 23/11/2025</b>.",
       "footer_note_2": "2. The performance schedule for each act will be updated on the event website on 24/11/2025.",
-      "footer_note_3": "3. Contestants must arrive 15 minutes before the performance time for attendance and preparation.",
+      "footer_note_3": "3. Contestants must arrive 30 minutes before the performance time for attendance and preparation.",
       "footer_note_4": "4. Round 1 performances should not exceed 3 minutes and must showcase skills, talent, and the main content of the work.",
       "success_text_1": "Thank you for registering for WISers’ Greatest Show 2025!",
       "success_text_2": "Your registration information has been successfully recorded and sent to your registered email address.​",
       "success_text_3": "The Organizing Committee will review and approve your submission in the coming days.​",
       "success_text_4": "Please stay tuned for updates via email or the school’s official communication channels.",
       "success_text_5": "See you at <b>ROUND 1 – “WITHIN ME” on November 29, 2025</b>. ​Get ready to shine and showcase your unique talent! ​",
-      "submit_note": "By clicking the “REGISTER” button, you confirm that you have read and agree to the regulations and terms of participation in the WISers’ Greatest Show 2025 competition on the event website.",
+      "submit_note": "By clicking the “REGISTER” button, you confirm that you have read and agree to the regulations and terms of participation in <br/>the WISers’ Greatest Show 2025 competition on the event website.",
       "submitting": "Submitting your registration. Please wait..."
     },
     "buttons": {
