--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -339,6 +339,7 @@
       "footer_note_2": "2. The performance schedule for each act will be updated on the event website on 24/11/2025.",
       "footer_note_3": "3. Contestants must arrive 30 minutes before the performance time for attendance and preparation.",
       "footer_note_4": "4. Round 1 performances should not exceed 3 minutes and must showcase skills, talent, and the main content of the work.",
+      "footer_note_5": "Each contestant participate in <b>only one performance</b>, either as an individual or as part of a group. Once registered for a performance, contestant must <b>not join any additional performances</b>, whether individual, in another group, or as a supporting/sub-performance. <b>Example:</b> If a contestant registers for Performance A, they are <b>not allowed</b> to register for Performance B or any other performance.",
       "success_text_1": "Thank you for registering for WISers’ Greatest Show 2025!",
       "success_text_2": "Your registration information has been successfully recorded and sent to your registered email address.​",
       "success_text_3": "The Organizing Committee will review and approve your submission in the coming days.​",
