--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -340,6 +340,7 @@
       "footer_note_2": "2. Thời gian trình diễn dự kiến của từng tiết mục sẽ được BTC cập nhật tại website sự kiện vào ngày 24/11/2025",
       "footer_note_3": "3. Thí sinh cần có mặt trước giờ dự thi 30 phút để điểm danh và chuẩn bị",
       "footer_note_4": "4. Thí sinh chuẩn bị tiết mục cho vòng 1 với thời lượng không quá 3 phút, thể hiện được kỹ năng, năng khiếu của bản thân và nội dung chính của tác phẩm dự thi.",
+      "footer_note_5": "<b>Mỗi thí sinh chỉ được tham gia một tiết mục duy nhất</b>, có thể là cá nhân hoặc nhóm. Nếu đã đăng ký một tiết mục, thí sinh <b>không được tham gia thêm bất kỳ tiết mục nào khác</b>, dù là cá nhân, nhóm khác, hay tiết mục phụ/trợ. Ví dụ: Thí sinh đã đăng ký Tiết mục A thì không được đăng ký Tiết mục B hay bất kỳ tiết mục nào khác.",
       "success_text_1": "Cảm ơn bạn đã đăng ký tham gia WISer's Greatest Show 2025.",
       "success_text_2": "Thông tin đăng ký đã được  hệ thống ghi nhận và gửi đến địa chỉ email của bạn.​",
       "success_text_3": "Ban Tổ chức sẽ kiểm tra và phê duyệt hồ sơ dự thi của bạn.​",
