--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -374,5 +374,46 @@
       "minutes": "Minutes",
       "seconds": "Seconds"
     }
+  },
+  "kindergarten_demo_day": {
+    "modal_title": "Request Certificate",
+    "modal_description": "Please fill in the information below to receive your certificate",
+    "section_student_info": "Student Information",
+    "section_parent_info": "Parent Information",
+    "label_student_name": "Full Name",
+    "label_student_dob": "Date of Birth",
+    "label_dob_example": "Ex: 23/08/1998",
+    "label_parent_name": "Full Name",
+    "label_parent_email": "Email Address",
+    "label_parent_phone": "Phone Number",
+    "label_rating": "How was your experience?",
+    "placeholder_student_name": "Search for student...",
+    "placeholder_search": "Type to search...",
+    "placeholder_dob": "DD/MM/YYYY",
+    "placeholder_parent_name": "Enter parent's full name",
+    "placeholder_parent_email": "example@email.com",
+    "placeholder_parent_phone": "Enter phone number",
+    "empty_student": "No student found",
+    "required_field": "*",
+    "rating_poor": "Low",
+    "rating_fair": "Fair",
+    "rating_good": "Good",
+    "rating_great": "Great",
+    "rating_amazing": "Amazing",
+    "date_verified": "Date verified ✓",
+    "button_submit": "Request Certificate",
+    "button_submitting": "Submitting...",
+    "button_cancel": "Cancel",
+    "error_parent_name_required": "Parent's full name is required",
+    "error_email_required": "Email is required",
+    "error_email_invalid": "Please enter a valid email address",
+    "error_phone_required": "Phone number is required",
+    "error_student_name_required": "Student's full name is required",
+    "error_dob_required": "Date of birth is required",
+    "error_dob_mismatch": "⚠️ Date of birth does not match student record. Please verify and try again.",
+    "error_rating_required": "Please rate your experience",
+    "error_event_not_found": "Event not found. Please refresh the page.",
+    "error_registration_failed": "Failed to submit registration. Please try again.",
+    "error_unexpected": "An unexpected error occurred. Please try again later."
   }
 }
