--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -371,7 +371,7 @@
       "not_opened_title": "Đăng ký sắp mở!",
       "not_opened_message": "Đăng ký sẽ mở vào lúc <b>{{date}}</b>. <br/> Vui lòng quay lại sau.",
       "expired_title": "Đăng ký đã đóng",
-      "expired_message": "Chúng tôi rất tiếc, nhưng thời gian đăng ký đã kết thúc. <br/> Vui lòng liên hệ BTC qua email để được hỗ trợ thêm.",
+      "expired_message": "Chúng tôi rất tiếc, nhưng thời gian đăng ký đã kết thúc. <br/> Cảm ơn bạn đã quan tâm đến WISers' Greatest Show 2025!",
       "days": "Ngày",
       "hours": "Giờ",
       "minutes": "Phút",
