--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -381,8 +381,8 @@
   "kindergarten_demo_day": {
     "go_to_event": "Đến sự kiện",
     "get_certificate": "Lấy chứng nhận",
-    "modal_title": "Yêu cầu Giấy chứng nhận",
-    "modal_description": "Vui lòng điền thông tin bên dưới để nhận giấy chứng nhận",
+    "modal_title": "GIẤY CHỨNG NHẬN THAM GIA",
+    "modal_description": "Cảm ơn các bé đã tham gia buổi trải nghiệm thú vị tại Trường Wellspring Saigon. Quý Phụ huynh vui lòng điền thông tin bên dưới để nhận giấy chứng nhận của các bé.",
     "section_student_info": "Thông tin Học sinh",
     "section_parent_info": "Thông tin Phụ huynh",
     "label_student_name": "Họ tên",
