--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -225,6 +225,17 @@
     "registration_failed": {
       "title": "Registration Failed",
       "message": "Sorry, an error occurred. Please try again later."
+    },
+    "event_registration": {
+      "title": "Event Registration Confirmation",
+      "confirm_button": "Confirm Attendance",
+      "success_title": "Registration Successful",
+      "success_message": "Thank you for confirming your attendance. You will receive a confirmation email with event details shortly.",
+      "error_title": "Registration Failed",
+      "error_message": "Sorry, an error occurred. Please try again later.",
+      "already_registered": "You have already registered for this event",
+      "wait_for_confirmation": "Please wait for the confirmation email with your QR code and group assignment.",
+      "invalid_link": "Invalid or expired registration link"
     }
   },
   "greatest_show_25": {
