--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -235,7 +235,9 @@
       "error_message": "Sorry, an error occurred. Please try again later.",
       "already_registered": "Student has registered to attend the Event.",
       "wait_for_confirmation": "Congratulations! Student has successfully registered to attend the event on 24/01/2026. Parents, please wait for a confirmation email and further instructions from the Admissions Office.",
-      "invalid_link": "Invalid or expired registration link"
+      "invalid_link": "Invalid or expired registration link",
+      "event_closed": "Event registration is closed",
+      "deadline": "Registration deadline: <b>{{time}}</b>"
     }
   },
   "greatest_show_25": {
